WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62633
IndexedDB: LevelDB doesn't do incognito mode; fall back to SQLite.
https://bugs.webkit.org/show_bug.cgi?id=62633
Summary
IndexedDB: LevelDB doesn't do incognito mode; fall back to SQLite.
Hans Wennborg
Reported
2011-06-14 07:32:40 PDT
IndexedDB: LevelDB doesn't do incognito mode; fall back to SQLite.
Attachments
Patch
(2.58 KB, patch)
2011-06-14 07:35 PDT
,
Hans Wennborg
tonyg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hans Wennborg
Comment 1
2011-06-14 07:35:46 PDT
Created
attachment 97116
[details]
Patch
David Grogan
Comment 2
2011-06-14 15:20:41 PDT
Comment on
attachment 97116
[details]
Patch LGTM
Hans Wennborg
Comment 3
2011-06-15 06:17:46 PDT
Committed
r88921
: <
http://trac.webkit.org/changeset/88921
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug