2011-06-14  Hans Wennborg  <hans@chromium.org>

Reviewed by Tony Gentilcore.

        IndexedDB: LevelDB doesn't do incognito mode; fall back to SQLite.
        https://bugs.webkit.org/show_bug.cgi?id=62633

        LevelDB does not support in-memory databases. Fall back to SQLite
        for incognito mode browsing. This will be tested by browser_tests
        in Chromium.

        * src/WebIDBFactoryImpl.cpp:
        (WebKit::WebIDBFactoryImpl::open):

Canonical link: https://commits.webkit.org/78270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88921 268f45cc-cd09-0410-ab3c-d52691b4dbfc